fix wrong partner link

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a href="https://cronosapp.cougarswap.io/" target="_blank"><img src="./resources/img/partners/cougar.png" alt="cougar logo"></a>
                 <a href="https://crodex.app/" target="_blank"><img src="./resources/img/partners/crodex.png" alt="crodex logo"></a>
                 <a href="https://cronosphere.org/wp/" target="_blank"><img src="./resources/img/partners/cronosphere.jpg" alt="cronosphere logo"></a>
-                <a href="https://cronosphere.org/wp/" target="_blank"><img src="./resources/img/partners/cronoschainnews.jpg" alt="cronoschainnews logo"></a>
+                <a href="https://twitter.com/CronosChainNews" target="_blank"><img src="./resources/img/partners/cronoschainnews.jpg" alt="cronoschainnews logo"></a>
                 <a href="https://www.csacrypto.com/" target="_blank"><img src="./resources/img/partners/CSA.jpg" alt="CSA logo"></a>
                 <a href="https://www.babycrogemint.com/" target="_blank"><img src="./resources/img/partners/babycroge.png" alt="Baby Croge logo"></a>
             </div>
