Update corgi drop section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
                     <h1>NFT DROP</h1>
                 </section>
                 <div>
+                    <img src="./resources/img/corgi.png" alt="croclean">
+                    <h2>CORGI CLUB</h2>
+                    <h3><a href="http://www.corgistudio.io" target="_blank">Website</a>
+                        <a href="https://twitter.com/CronosCorgi" target="_blank">Twitter</a>
+                        <a href="https://discord.com/invite/vKQ5Q6EMuM" target="_blank">Discord</a>
+                        <a href="https://t.me/corgitokencronos" target="_blank">Telegram</a>
+                    </h3>
+                    <p>
+                        Collection size: 10,000<br>
+                        Mint price:<br>
+                        Early Bird: 150 Cro (First 1500)<br>
+                        Public: 200 Cro (AFter 1500)<br>
+                        Mint date: 04/2022
+                    </p>
+                    <a class="mint" href="https://corgistudio.io/mint" target="_blank">MINT</a>
+                </div>
+                <div>
                     <img src="./resources/img/croclean.jpg" alt="croclean">
                     <h2>CLEANING MAFIA</h2>
                     <h3><a href="http://www.cleanmafia.net/" target="_blank">Website</a>
