--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                         Mint price:<br>
                         Early Bird: 150 Cro (First 1500)<br>
                         Public: 200 Cro (AFter 1500)<br>
-                        Mint date: 04/2022
+                        Mint date: 04/2022<br>
+                        #Corgigang
                     </p>
                     <a class="mint" href="https://corgistudio.io/mint" target="_blank">MINT</a>
                 </div>
