--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         Whitelist: 25 Cro<br>
                         Corgi NFT Holder: 25 Cro<br>
                         Public: 50 Cro<br>
-                        Mint date: TBA
+                        Mint date: 08/21/2022
                     </p>
                     <a class="mint" href="#" target="_blank">Coming Soon</a>
                 </div>
