--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         Public: 50 Cro<br>
                         Mint date: 08/21/2022
                     </p>
-                    <a class="mint" href="#" target="_blank">Coming Soon</a>
+                    <a class="mint" href="https://corgistudio.io/launch/mint/6301a4871b46098252fa3ba3" target="_blank">MINT</a>
                 </div>
                 <div>
                     <img src="./resources/img/CSA.jpg" alt="CSA">
