--- a/disclaimer.html
+++ b/disclaimer.html
@@ -9,6 +9,7 @@
     <link href="./resources/css/header.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/body.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/footer.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/animation.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
