--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="./resources/css/header.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/body.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/footer.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/animation.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -100,7 +101,12 @@
                     <a class="mint" href="#" target="_blank">Coming Soon</a>
                 </div>
         </div>
-
+        <div class="recentdrops">
+            <h2>RECENT DROPS</h2>
+            <div>
+            
+            </div>
+        </div>
         <div class="corgi">
             <div>
                 <img src="./resources/img/logo.png" alt="marketlogo">
