--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             
         <div class="corgi3">
             <h1>ABOUT US</h1>
-            <p>Corgi Studio is a California certified LLC</p>
+            <p>Corgi Studio is a British Columbia Canada Incorporated company</p>
             <img src="./resources/img/corgillc.png" alt="corgi llc">
         </div>
 
